# routes/index.js
@@ -3,5 +3,6 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 
 router.use('/consoles', require('./consoles'));
+router.use('/games', require('./games'));
 
 module.exports = router;
